--- a/06.Flexbox/04.FlexModel-Calendar/Solution/style.css
+++ b/06.Flexbox/04.FlexModel-Calendar/Solution/style.css
@@ -1,67 +1,46 @@
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
 
 .container {
-    border: 2px solid black;
     display: flex;
-    flex-flow: column;
     margin: 50px auto;
     max-width: 65vw;
 }
 
-section {
-    display: flex;
-    flex-flow: row;
-}
-
-section:first-child,
-.upper {
-    border-bottom: 2px solid black;
-}
-
 .week {
     display: flex;
+    flex: 0 1 40vw;
+    flex-flow: row wrap;
 }
 
-.main {
+.notes {
     display: flex;
-    flex-flow: column;
-    flex: 0 1 75%;
+    flex: 0 1 25vw;
+    flex-direction: column;
 }
 
-.boxes {
-    display: flex;
-    flex-flow: row;
-}
-
-.week .item {
+span {
+    border: 1px solid black;
     flex: 0 1 20%;
-} 
-
-.notes .item {
-    flex: 0 1 50%;
-}
-
-.upper,
-.item {
-    display: flex;
-    flex-flow: row;
     height: 150px;
-    justify-content: center;
+    text-align: center;
     padding-top: 20px;
 }
 
-.item.small:not(:last-child),
-.item.big:not(:last-child) {
-    border-right: 2px solid black;
+.week span:first-child,
+.week span:nth-child(7) {
+    flex: 1 0 100%;
 }
 
-.aside {
-    border-left: 2px solid black;
-    flex: 0 1 25%;
-    text-align: center;
+.week span:nth-child(8),
+.week span:nth-child(9) {
+    flex: 0 1 50%;
+}
+
+
+.notes span {
+    flex: 0 1 50%;
+    height: 300px;
     padding-top: 10px;
 }
