--- a/07.Media-Queries/03.Responsive-Menu/Solution/responsive.css
+++ b/07.Media-Queries/03.Responsive-Menu/Solution/responsive.css
@@ -9,6 +9,7 @@
         align-items: center;
         display: flex;
         justify-content: center;
+        padding-bottom: 20px;
     }
 
     .fa-times,
