--- a/07.Media-Queries/04.Update-Blog-Layout/Solution/style.css
+++ b/07.Media-Queries/04.Update-Blog-Layout/Solution/style.css
@@ -1,13 +1,13 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
     background-color: rgb(238, 238, 238);
     display: flex;
     flex-flow: row;
     justify-content: center;
     margin: 0;
+}
+
+a {
+    text-decoration: none;
 }
 
 img {
@@ -31,21 +31,15 @@ h6 {
     clear: both;
 }
 
-.page {
-    display: flex;
-    flex: 0 1 80%;
-    /* flex-flow: row wrap; */
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 50px auto;
-}
-
 header {
+    align-items: center;
     border-bottom: 2px solid black;
+    display: flex;
     flex: 1 0 100%;
 }
 
 header p {
+    flex: 0 1 55%;
     font-size: 28px;
     font-family: sans-serif;
     font-weight: bold;
@@ -67,7 +61,7 @@ main {
 
 .middle {
     display: flex;
-    flex-flow: row-reverse wrap;
+    flex-flow: row wrap;
 }
 
 blockquote {
@@ -77,7 +71,6 @@ blockquote {
     font-style: italic;
     font-weight: 100;
     line-height: 1.5;
-    margin: 0;
     padding-left: 20px;
 }
 
@@ -95,12 +88,12 @@ blockquote footer {
 }
 
 .middle h2,
-.middle > p:nth-child(2) {
+.middle > p:nth-child(2),
+.middle > p:nth-child(4) {
     flex: 1 1 100%;
 }
 
-.middle blockquote,
-.middle > p:nth-child(4) {
+.middle blockquote {
     flex: 0 1 50%;
 }
 
@@ -122,3 +115,9 @@ aside ul li a {
     color: rgb(0, 153, 0);
     text-decoration: none;
 }
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+  
+    
+    
+  }
