--- a/07.Media-Queries/06.Responsive-Media-Boxes/Solution/style.css
+++ b/07.Media-Queries/06.Responsive-Media-Boxes/Solution/style.css
@@ -57,8 +57,9 @@ img {
     justify-content: flex-end;
 }
 
-.wrap-btn p {
+.wrap-btn span {
     background-color: rgb(0, 153, 0);
+    border-radius: 3px;
     color: rgb(255, 255, 255);
     padding: 6px 12px;
 }
