--- a/07.Media-Queries/07.Landing-Page/Solution/typography.css
+++ b/07.Media-Queries/07.Landing-Page/Solution/typography.css
@@ -281,3 +281,92 @@ footer h3 {
 }
 
 /* ------------> END Footer <---------------- */
+
+@media (max-width: 1120px) {
+
+    /* Header */
+
+    header,
+    section.position {
+        width: 85%;
+    }
+
+    header div.heading-header {
+        flex: 0 1 50%;
+    }
+
+    header nav {
+        flex: 0 1 50%;
+    }
+
+    .heading-header p {
+        font-size: 8px;
+    }
+
+    /* Need a Website */
+
+    section.need-a-website {
+        width: 70%;
+    }
+
+    section.position.sign-up {
+        width: 100%;
+    }
+
+    
+
+}
+
+@media (max-width: 768px) {
+
+    header nav {
+        display: none;
+    }
+
+    .mobile-menu {
+        display: flex;
+    }
+
+    .position article ul li {
+        flex: 0 1 50%;
+    }
+
+    footer section {
+        flex-flow: column;
+        flex: 0 1 85%;
+    }
+
+    .wrap-footer-sitemap ul {
+        flex: 0 1 50%;
+    }
+
+    footer section article {
+        margin: 10px 0;
+    }
+
+    footer h3 {
+        padding-bottom: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .heading-header p {
+        font-size: 6px;
+    }
+
+    h2.purple-h2 {
+        font-size: 20px;
+    }
+
+    .sign-up h2 {
+        font-size: 20px;
+    }
+
+    form input {
+        width: 150px;
+    }
+
+    form button {
+        width: 110px;
+    }
+}
