--- a/00.Exams/05-July-2020/01.Diploma-and-Certificates/Solution/style.css
+++ b/00.Exams/05-July-2020/01.Diploma-and-Certificates/Solution/style.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 
-/* font-family: 'Montserrat', sans-serif; */
-/* font-family: 'Lato', sans-serif; */
-
 html {
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
@@ -25,6 +22,12 @@ body {
     height: 100vh;
 }
 
+h1,
+h2,
+h3 {
+    font-family: 'Montserrat', sans-serif;
+}
+
 article.wrap-all-page {
     max-width: 1200px;
 }
@@ -35,15 +38,21 @@ section.wrap-documents {
     display: flex;
 }
 
+.pseudo-element::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    z-index: -1;
+}
+
 section.wrap-all-text {
     flex-flow: column;
     justify-content: space-between;
+    width: 60%;
 }
 
-h1,
-h2,
-h3 {
-    font-family: 'Montserrat', sans-serif;
+section.wrap-documents {
+    width: 40%;
 }
 
 .italic {
@@ -52,6 +61,36 @@ h3 {
     font-style: italic;
 }
 
+.italic::before {
+    background: url("../Requirements-and-Resources/images/dots.svg");
+    height: 142px;
+    left: 0;
+    width: 72px;
+}
+
 section.wrap-documents {
+    justify-content: space-between;
     margin: 10px 0;
+}
+
+.certificate-wrapper,
+.diploma-wrapper {
+    position: relative;
+    width: 45%;
+}
+
+.certificate-wrapper::before {
+    background: url(../Requirements-and-Resources/images/dots.svg);
+    height: 115px;
+    right: -40px;
+    top: -40px;
+    width: 115px;
+}
+
+.diploma-wrapper::before {
+    background: url(../Requirements-and-Resources/images/arrow.svg);
+    height: 400px;
+    left: -12px;
+    top: -28px;
+    width: 303px;
 }
