--- a/00.Exams/17-December-2019/03.Cooking Blog/Solution/style.css
+++ b/00.Exams/17-December-2019/03.Cooking Blog/Solution/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css");
+
 body {
     background: url("../Requirements-and-Resources/Media/background.jpg");
     height: 100%;
@@ -5,6 +7,41 @@ body {
     width: 100%;
 }
 
+.wrap-all-page {
+    display: flex;
+    flex-flow: column;
+}
+
+/* -----HEADER----- */
+
 header {
-    
+    align-items: center;
+    background-color: #e6e3de;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px;
+}
+
+header ul {
+    display: flex;
+}
+
+header ul li {
+    margin: 0 20px;
+}
+
+header ul li a {
+    color: #554938;
+}
+
+.wrap-login-icon-serach button {
+    background-color: #554938;
+    border: none;
+    color: #ffffff;
+    margin-right: 10px;
+    padding: 5px 10px;
+}
+
+.wrap-login-icon-serach i.fas {
+    margin-left: 10px;
 }
