--- a/00.Exams/17-December-2019/03.Cooking Blog/Solution/style.css
+++ b/00.Exams/17-December-2019/03.Cooking Blog/Solution/style.css
@@ -2,7 +2,6 @@
 
 body {
     background: url("../Requirements-and-Resources/Media/background.jpg");
-    height: 100%;
     max-width: 1920px;
     width: 100%;
 }
@@ -44,4 +43,43 @@ header ul li a {
 
 .wrap-login-icon-serach i.fas {
     margin-left: 10px;
+}
+
+/* -----Section Carving----- */
+
+section.carving {
+    align-items: center;
+    background: url("../Requirements-and-Resources/Media/craving.jpg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    height: 400px;
+}
+
+.wrap-search-field {
+    position: relative;
+}
+
+.wrap-search-field::before {
+    content: "\f002";
+    display: inline-block;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    left: 5px;
+    padding-right: 3px;
+    position: absolute;
+    top: 5px;
+}
+
+section.carving h1 {
+    color: #ffffff;
+    font-size: 42px;
+}
+
+section.carving input {
+    opacity: 0.4;
+    padding: 3px 0 3px 20px;
+    width: 330px;
 }
