feat: section "For The Course" is ready

--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/style.css
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/style.css
@@ -78,6 +78,24 @@ h2,
     width: 100%;
 }
 
+section.heading-one,
+section.for-course {
+    align-items: center;
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+}
+
+section h2::after {
+    background-color: orange;
+    content: "";
+    display: block;
+    height: 4px;
+    left: 5%;
+    position: relative;
+    width: 90%;
+}
+
 /* ----- Header ----- */
 
 header {
@@ -159,12 +177,9 @@ section.under-header article {
 /* ----- Section Heading One ----- */
 
 section.heading-one {
-    align-items: center;
     background: url("../Requirements-and-Resources/images/foggy-background.png");
     background-size: cover;
-    display: flex;
-    flex-flow: column;
-    width: 100%;
+    margin-bottom: 40px;
 }
 
 section.heading-one article {
@@ -181,3 +196,19 @@ i.fas,
 i.far {
     padding-right: 2px;
 }
+
+/* ----- Section For Courses */
+
+section.for-course article {
+    align-items: center;
+    background-color: #f2f2f2;
+    display: flex;
+    flex-flow: column;
+    padding: 0 40px;
+    width: 80%;
+}
+
+.for-course span {
+    font-weight: 900;
+}
+
