--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/style.css
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/style.css
@@ -9,6 +9,10 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+main section:nth-of-type(n+3) {
+    margin-bottom: 20px;
+}
+
 header section {
     flex: 0 1 80%;
 
