--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/style.css
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/style.css
@@ -63,6 +63,7 @@ h2,
 }
 
 .btn-big {
+    display: inline-block;
     margin: 10px 0 35px 0;
     padding: 5px 0;
     width: 250px;
@@ -73,6 +74,7 @@ h2,
     font-size: 14px;
     padding: 5px 0;
     text-transform: uppercase;
+    vertical-align: middle;
 }
 
 .wrap-all-page {
