--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/style.css
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/style.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-main section:nth-of-type(n+3) {
+main > section:nth-of-type(n+3) {
     margin-bottom: 20px;
 }
 
@@ -44,6 +44,10 @@ h2,
     color: rgb(236, 233, 233);
     font-family: 'Rubik', sans-serif;
     font-weight: 300;
+}
+
+.blue {
+    color: #337ab7;
 }
 
 .orange {
@@ -88,7 +92,8 @@ section.heading-one,
 section.for-course,
 section.skills,
 section.topics,
-section.advice {
+section.advice,
+section.details {
     align-items: center;
     display: flex;
     flex-flow: column;
@@ -98,7 +103,8 @@ section.advice {
 section.for-course article,
 section.skills article,
 section.topics article,
-section.advice article {
+section.advice article,
+section.details article {
     align-items: center;
     display: flex;
     flex-flow: column;
@@ -223,7 +229,8 @@ section.for-course article {
     background-color: #f2f2f2;
 }
 
-.for-course span {
+.for-course span,
+.details span {
     background-color: #f2f2f2;
     font-weight: 900;
 }
@@ -304,4 +311,62 @@ section.advice h2::after {
 
 section.advice p {
     padding: 0 50px;
+}
+
+/* ----- Section Details ----- */
+
+section.details article {
+    background-color: #f2f2f2;
+    padding: 0;
+    position: relative;
+}
+
+section.description,
+section.deep-description {
+    padding: 0 20px;
+}
+
+.large-orange {
+    color: #ffa000;
+    display: block;
+    font-weight: 700;
+    font-size: 18px;
+    text-transform: uppercase;
+}
+
+section.type-of-training {
+    box-shadow: 2px 3px 3px 1px rgba(0,0,0,0.55);
+    color: #fff;
+    display: flex;
+    flex-flow: column;
+    position: relative;
+    bottom: -3px;
+    width: 98%;
+}
+
+section.type-of-training ul {
+    flex: 0 1 60%;
+    list-style-type: disc;
+}
+
+section.type-of-training h3 {
+    flex: 0 1 40%;
+    font-size: 20px;
+    font-weight: 900;
+    margin: 0;
+    text-transform: uppercase;
+}
+
+.blue-container,
+.orange-container {
+    display: flex;
+    padding: 10px 0 20px 20px;
+}
+
+.blue-container {
+    background-color: #234465;
+}
+
+.orange-container {
+    background-color: #ffa000;
 }
