--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/style.css
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/style.css
@@ -5,8 +5,27 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css");
 
 body {
-    background-color: #fff;
     font-family: 'Lato', sans-serif;
+}
+
+main {
+    position: relative;
+}
+
+main::before {
+    background: url(../Requirements-and-Resources/images/wordpress.png);
+    background-position: center;
+    background-size: cover;
+    content: "";
+    display: block;
+    height: 660px;
+    left: -277px;
+    opacity: 0.7;
+    position: absolute;
+    width: 660px;
+    z-index: -1;
+    top: 100px;
+    transform: rotateZ(20deg);
 }
 
 main > section:nth-of-type(n+3) {
@@ -93,7 +112,8 @@ section.for-course,
 section.skills,
 section.topics,
 section.advice,
-section.details {
+section.details,
+section.teacher {
     align-items: center;
     display: flex;
     flex-flow: column;
@@ -104,7 +124,8 @@ section.for-course article,
 section.skills article,
 section.topics article,
 section.advice article,
-section.details article {
+section.details article,
+section.teacher article {
     align-items: center;
     display: flex;
     flex-flow: column;
@@ -120,6 +141,13 @@ section h2::after {
     left: 5%;
     position: relative;
     width: 90%;
+}
+
+.for-course span,
+.details span,
+.teacher span {
+    background-color: #f2f2f2;
+    font-weight: 900;
 }
 
 /* ----- Header ----- */
@@ -206,6 +234,7 @@ section.heading-one {
     background: url("../Requirements-and-Resources/images/foggy-background.png");
     background-size: cover;
     margin-bottom: 40px;
+    opacity: 0.8;
 }
 
 section.heading-one article {
@@ -227,12 +256,6 @@ i.far {
 
 section.for-course article {
     background-color: #f2f2f2;
-}
-
-.for-course span,
-.details span {
-    background-color: #f2f2f2;
-    font-weight: 900;
 }
 
 /* ----- Section Skills ----- */
@@ -369,4 +392,97 @@ section.type-of-training h3 {
 
 .orange-container {
     background-color: #ffa000;
+}
+
+/* ----- Section Teacher ----- */
+
+section.teacher article {
+    background-color: #f2f2f2;
+}
+
+.teacher h2 {
+    padding-bottom: 50px;
+}
+
+.wrap-img-and-text {
+    display: flex;
+    justify-content: space-between;
+}
+
+.wrap-img-and-text img {
+    border-radius: 50%;
+    flex: 0 1 125px;
+    height: 125px;
+    margin-bottom: 30px;
+    width: 125px;
+}
+
+.wrap-img-and-text p {
+    flex: 0 1 85%;
+    position: relative;
+}
+
+.bold-heading {
+    color: #234465;
+    display: block;
+    font-size: 20px;
+    font-weight: 900;
+    position: absolute;
+    top: -35px;
+}
+
+/* ----- Section Button ----- */
+
+section.button button.btn-big {
+    margin-top: 0;
+}
+
+/* ----- Footer ----- */
+
+footer {
+    align-items: center;
+    background-color: #162b40;
+    display: flex;
+    flex-flow: column;
+    padding-bottom: 16px;
+    width: 100%;
+}
+
+footer,
+footer a {
+    color: #fff;
+}
+
+footer article {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer article section {
+    flex: 0 1 20%;
+}
+
+.orange-text {
+    color: #ffa000;
+    font-weight: 700;
+}
+
+footer a {
+    font-family: 'Rubik', sans-serif;
+    font-size: 12px;
+    font-weight: 300;
+}
+
+.wrap-icons {
+    padding-top: 16px;
+}
+
+.wrap-icons i {
+    margin-right: 10px;
+}
+
+.gray-text-footer {
+    color: #7e8995;
+    font-size: 14px;
 }
