--- a/00.Exams/12-August-2020/01. Simple-Articles/Solution/reset.css
+++ b/00.Exams/12-August-2020/01. Simple-Articles/Solution/reset.css
@@ -17,14 +17,11 @@ body {
 ol, ul {
 	list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+a {
+    text-decoration: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
