--- a/00.Exams/12-August-2020/01. Simple-Articles/Solution/style.css
+++ b/00.Exams/12-August-2020/01. Simple-Articles/Solution/style.css
@@ -11,8 +11,15 @@ h3 {
     font-family: 'Montserrat', sans-serif;
 }
 
+h1 {
+    color: #44a9f8;
+    font-size: 28px;
+    margin-right: 10px;
+}
+
 h3 {
     color: #000000;
+    font-size: 24px;
     font-weight: 500;
     margin-bottom: 20px;
 }
@@ -52,14 +59,46 @@ article {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     padding-right: 3px;
-    margin-right: 5px;
+    margin-right: 10px;
     vertical-align: middle;
 }
 
 .price-container {
     align-items: center;
-    border: 3px solid #44a9f8;
+    border: 4px solid #44a9f8;
     display: flex;
     flex-flow: column;
     justify-content: center;
+}
+
+.price-container p {
+    font-size: 16px;
+    font-weight: bold;
+    padding: 20px;
+}
+
+.wrap-price {
+    align-items: center;
+    display: flex;
+}
+
+.wrap-price span {
+    color: #817f7f;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+button {
+    align-items: center;
+    background-color: #44a9f8;
+    display: flex;
+    justify-content: center;
+    width: 150px;
+    height: 30px;
+}
+
+button > a {
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
 }
