--- a/00.Exams/12-August-2020/01. Simple-Articles/Solution/style.css
+++ b/00.Exams/12-August-2020/01. Simple-Articles/Solution/style.css
@@ -91,6 +91,7 @@ article {
 button {
     align-items: center;
     background-color: #44a9f8;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     width: 150px;
