--- a/00.Exams/12-August-2020/01. Simple-Articles/Solution/style.css
+++ b/00.Exams/12-August-2020/01. Simple-Articles/Solution/style.css
@@ -89,17 +89,13 @@ article {
 }
 
 button {
-    align-items: center;
     background-color: #44a9f8;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    width: 150px;
-    height: 30px;
+    padding: 10px 0;
 }
 
 button > a {
     color: #fff;
     font-weight: bold;
+    padding: 10px 40px;
     text-transform: uppercase;
 }
