--- a/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/style.css
+++ b/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/style.css
@@ -75,6 +75,7 @@ header > nav > ul > li:last-child a {
 .wrap-certificates {
     display: flex;
     justify-content: center;
+    font-size: 14px;
     margin-top: 30px;
     width: 100%;
 }
@@ -139,3 +140,36 @@ h1 {
 
 /* ----- Main ----- */
 
+main {
+    align-items: center;
+    display: flex;
+    flex-flow: column;
+}
+
+.diploma {
+    display: flex;
+    flex-flow: column;
+    font-size: 15px;
+    margin-top: 100px;
+    width: 82%;
+}
+
+h2 {
+    margin: 30px auto;
+}
+
+.diploma-gray-text {
+    background-color: #f4f5f7;
+}
+
+.diploma-gray-text p {
+    padding: 10px;
+}
+
+.diploma-gray-text p:last-child {
+    padding-bottom: 30px;
+}
+
+.diploma > p {
+    margin-top: 30px;
+}
