--- a/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/style.css
+++ b/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/style.css
@@ -95,8 +95,11 @@ header > nav > ul > li:last-child a {
     font-weight: 300;
 }
 
-h1 {
+h1, h2, h3 {
     font-weight: 500;
+}
+
+h1 {
     padding: 30px 20px 10px 20px;
 }
 
@@ -146,6 +149,8 @@ main {
     flex-flow: column;
 }
 
+/* ----- Article Diploma ----- */
+
 .diploma {
     display: flex;
     flex-flow: column;
@@ -154,7 +159,7 @@ main {
     width: 82%;
 }
 
-h2 {
+.diploma h2 {
     margin: 30px auto;
 }
 
@@ -171,5 +176,78 @@ h2 {
 }
 
 .diploma > p {
-    margin: 30px 0;
+    margin: 10px 0 30px 0;
+}
+
+/* ----- Article Explore ----- */
+
+.explore {
+    background: linear-gradient(rgba(132, 183, 212, 0.4), rgba(132, 183, 201, 0.5)), url("../Requirements-and-Resources/images/sign-up-prompt-background.jpg");
+    border-radius: 8px;
+    color: #fefefe;
+    margin-top: 50px;
+    width: 82%;
+}
+
+.explore,
+.center-explore {
+    align-items: center;
+    display: flex;
+    flex-flow: column;
+}
+
+.center-explore {
+    width: 60%;
+}
+
+.center-explore h2 {
+    font-weight: 500;
+    padding-top: 30px;
+}
+
+.center-explore > p {
+    padding: 20px 0;
+    text-align: center;
+}
+
+.explore-wrap-buttons {
+    padding: 20px 0 30px 0;
+}
+
+.explore-wrap-buttons button {
+    border-radius: 8px;
+    font-size: 16px;
+    padding: 10px 30px;
+    text-transform: uppercase;
+}
+
+.apply {
+    color: #43abf8;
+    background-color: #ffffff;
+    border: 2px solid #ffffff;
+    margin-right: 30px;
+}
+
+.curriculum {
+    color: #fefefe;
+    background-color: transparent;
+    border: 2px solid #fefefe;
+    margin-left: 30px;
+    position: relative;
+}
+
+.apply:hover,
+.curriculum:hover {
+    cursor: pointer;
+}
+
+.curriculum::before {
+    background-color: #ffffff;
+    content: "";
+    display: inline-block;
+    height: 30px;
+    left: -32px;
+    position: absolute;
+    top: 5px;
+    width: 2px;
 }
