feat: add calculator.svg

--- a/00.Exams/01-November-2020-My-Exam/03. Fees-Landing-Page/Solution/style.css
+++ b/00.Exams/01-November-2020-My-Exam/03. Fees-Landing-Page/Solution/style.css
@@ -63,6 +63,17 @@ main {
     width: 100%;
 }
 
+main::before {
+    content: "";
+    position: absolute;
+    background: url("../Requirements-and-Resources/images/calculator-icon.svg");
+    background-size: cover;
+    height: 300px;
+    width: 250px;
+    left: -5%;
+    top: 140px;
+}
+
 /* ----- Section Fee ----- */
 
 .fee {
